# rules_verilator

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  version.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.bcr/tools/bzl_version/: BUILD.bazel  version_test.py
.github/: release_notes.template
.github/workflows/: bcr_helper.yml  ci.yml  release.yaml
verilator/: BUILD.bazel  defs.bzl
verilator/private/: BUILD.bazel  common.bzl  hierarchical.bzl  providers.bzl  toolchain.bzl  transitions.bzl  verilator_cc_aspect.bzl  verilator_cc_library.bzl  verilator_copy_file.cc  verilator_process_wrapper.cc
verilator/tests/: BUILD  hier_block_a.sv  hier_block_b.sv  hier_top.sv  hierarchical_compile_test.cc  timing_tb.sv  timing_tb_test.cc
verilator/tests/include_defs/: include_leaf_defs.svh
verilator/tests/verilator/data/: BUILD.bazel  load_and_count_test.cc
verilator/tests/verilator/flat/: BUILD.bazel  adder_test.cc  include_top_test.cc
verilator/tests/verilator/hierarchical/: BUILD.bazel  include_top_test.cc  module_0_test.cc  module_1_test.cc  module_2_test.cc
verilator/tests/verilator/nested_modules/: BUILD.bazel  nested_module_test.cc
verilator/tests/verilator/systemc/: BUILD.bazel  adder_systemc_test.cc  nested_module_systemc_test.cc
verilator/tests/verilator/trace/: BUILD.bazel  adder_trace_test.cc  nested_module_trace_test.cc
verilator/tests/verilog/adder/: BUILD.bazel
verilator/tests/verilog/data/: BUILD.bazel  load_and_count.sv
verilator/tests/verilog/include/: BUILD.bazel  include_leaf.sv  include_top.sv
verilator/tests/verilog/nested/module_0/: BUILD.bazel
verilator/tests/verilog/nested/module_1/: BUILD.bazel
verilator/tests/verilog/nested/module_2/: BUILD.bazel
verilator/toolchain/: BUILD.bazel
