load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//verilator:defs.bzl", "verilator_cc_library")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:private"],
)

verilator_cc_library(
    name = "adder_verilator",
    module = "//verilator/tests/verilog/adder",
)

verilator_cc_library(
    name = "include_top_verilator",
    module = "//verilator/tests/verilog/include:include_top",
)

cc_test(
    name = "adder_test",
    srcs = ["adder_test.cc"],
    deps = [
        ":adder_verilator",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "include_top_test",
    srcs = ["include_top_test.cc"],
    deps = [
        ":include_top_verilator",
        "@googletest//:gtest_main",
    ],
)
