load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//verilator:defs.bzl", "verilator_cc_library")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:private"],
)

verilator_cc_library(
    name = "adder_systemc_verilator",
    module = "//verilator/tests/verilog/adder",
    systemc = True,
)

verilator_cc_library(
    name = "adder_systemc_verilator_hier",
    hierarchical = True,
    module = "//verilator/tests/verilog/adder",
    systemc = True,
)

verilator_cc_library(
    name = "nested_module_systemc_verilator",
    module = "//verilator/tests/verilog/nested/module_2:nested_module_2",
    systemc = True,
)

verilator_cc_library(
    name = "nested_module_systemc_verilator_hier",
    hierarchical = True,
    module = "//verilator/tests/verilog/nested/module_2:nested_module_2",
    systemc = True,
)

cc_test(
    name = "adder_systemc_test",
    srcs = ["adder_systemc_test.cc"],
    deps = [
        ":adder_systemc_verilator",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "adder_systemc_hier_test",
    srcs = ["adder_systemc_test.cc"],
    deps = [
        ":adder_systemc_verilator_hier",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "nested_module_systemc_test",
    srcs = ["nested_module_systemc_test.cc"],
    deps = [
        ":nested_module_systemc_verilator",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "nested_module_systemc_hier_test",
    srcs = ["nested_module_systemc_test.cc"],
    deps = [
        ":nested_module_systemc_verilator_hier",
        "@googletest//:gtest",
    ],
)
