load("@rules_verilog//verilog:defs.bzl", "verilog_library")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//verilator/tests:__subpackages__"],
)

exports_files(["test_data.dat"])

verilog_library(
    name = "load_and_count",
    srcs = ["load_and_count.sv"],
    data = ["test_data.dat"],
    top_module = "load_and_count",
)
