load("@rules_verilog//verilog:defs.bzl", "verilog_library")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//verilator/tests:__subpackages__"],
)

verilog_library(
    name = "nested_module_0",
    srcs = ["nested_module_0.sv"],
    top_module = "nested_module_0",
)
